--- a/launchassistant/cpp/CMakeLists.txt
+++ b/launchassistant/cpp/CMakeLists.txt
@@ -16,10 +16,18 @@ ament_target_dependencies(morioka_publisher rclcpp example_interfaces)
 add_executable(morioka_subscriber src/morioka_subscriber)
 ament_target_dependencies(morioka_subscriber rclcpp example_interfaces)
 
+add_executable(saitama_broadcaster src/saitama_broadcaster)
+ament_target_dependencies(saitama_broadcaster rclcpp example_interfaces)
+
+add_executable(saitama_receiver src/saitama_receiver)
+ament_target_dependencies(saitama_receiver rclcpp example_interfaces)
+
 
 install(TARGETS
       morioka_publisher
       morioka_subscriber
+      saitama_broadcaster
+      saitama_broadcaster
       DESTIONATION lib/${PROJECT_NAME}
       )
 ament_package()
